syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup.grpc.frete";
option java_outer_classname = "Protobuf";
option objc_class_prefix = "HLW";

package com.zup.grpc;

service ShippingService {
  rpc calcShipping(ShippingRequest) returns (ShippingResponse){}
}

message ShippingRequest {
  string cep = 1;
}
message ShippingResponse {
  string cep = 1;
  double value = 2;
}
